# modern-cpp-sortsearch

./: .gitignore  CMakeLists.txt  README.md
a1/: CMakeLists.txt
a1/include/: life.hpp
a1/src/: life.cpp  main.cpp
a2/include/: life.hpp
a2/src/: life.cpp  main.cpp
core/include/: search_engine.hpp  sort_engine.hpp
core/src/: sort_engine.cpp
final_eval_task/: CMakeLists.txt  README.md
final_eval_task/core/: CMakeLists.txt
final_eval_task/core/include/: search_engine.hpp  sort_engine.hpp
final_eval_task/core/src/: search_engine.cpp
final_eval_task/g1/: README.md
final_eval_task/g2/: README.md  main.cpp
final_eval_task/g3/: README.md  main.cpp
final_eval_task/g4/: README.md
final_eval_task/g5/: README.md  main.cpp
final_eval_task/plotter/: main.cpp
g1/: CMakeLists.txt  README.md  main.cpp
g2/: CMakeLists.txt  README.md
g3/: CMakeLists.txt  README.md  main.cpp
g4/: CMakeLists.txt  README.md  main.cpp
g5/: CMakeLists.txt  README.md  main.cpp
plotter/: CMakeLists.txt
