cmake_minimum_required(VERSION 3.14)
project(Programming3EvalTask LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 14)
option(BUILD_G1 "Build task 1" ON)
option(BUILD_G2 "Build task 2" ON)
option(BUILD_G3 "Build task 3" ON)
option(BUILD_G4 "Build task 4" ON)
option(BUILD_G5 "Build task 5" ON)
option(BUILD_PLOTTER "Build plotter for task 5" OFF)

add_subdirectory(core)

if (BUILD_G1)
    add_subdirectory(g1)
endif()
if (BUILD_G2)
    add_subdirectory(g2)
endif()
if (BUILD_G3)
    add_subdirectory(g3)
endif()
if (BUILD_G4)
    add_subdirectory(g4)
endif()
if (BUILD_G5)
    add_subdirectory(g5)
endif()
if (BUILD_PLOTTER)
    add_subdirectory(plotter)
endif()
