cmake_minimum_required(VERSION 3.14)
project(Programming3EvalTask LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 14)
option(BUILD_G1 "Build group 1 task" ON)
option(BUILD_G2 "Build group 2 task" ON)
option(BUILD_G3 "Build group 3 task" ON)
option(BUILD_G4 "Build group 4 task" ON)
option(BUILD_G5 "Build group 5 task" ON)
option(BUILD_PLOTTER "Build plotter for group 5 task" ON)

add_subdirectory(core)

if (BUILD_G1)
    add_subdirectory(g1)
endif()
if (BUILD_G2)
    add_subdirectory(g2)
endif()
if (BUILD_G3)
    add_subdirectory(g3)
endif()
if (BUILD_G4)
    add_subdirectory(g4)
endif()
if (BUILD_G5)
    add_subdirectory(g5)
endif()
if (BUILD_PLOTTER)
    add_subdirectory(plotter)
endif()
